--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
+    scroll-behavior: smooth;
     background-color: black;
     color: white;
 }
@@ -37,6 +39,45 @@ header {
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+}
+
+.skills-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.skill-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    justify-content: space-between;
+}
+
+.skill-header strong {
+    width: 150px;
+    margin-right: 20px;
+}
+
+.progress-bar {
+    width: 25%;
+    height: 7px;
+    background-color: #333;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.progress {
+    height: 100%;
+    background-color: #b74b4b;
+    transition: width 0.5s ease-in-out;
+}
+
+.skills-list li {
+    margin-bottom: 15px;
+}
+
+.skills-list p {
+    margin: 5px 0;
 }
 
 .popup {
@@ -132,8 +173,10 @@ nav a {
 
 nav a:hover,
 nav a.active {
-    color: #b74b4b;
-    border-bottom: 3px solid #b74b4b;
+    color: var(--hover-color, #b74b4b);
+    /* Default is red, but it can change */
+    border-bottom: 3px solid var(--hover-color, #b74b4b);
+    /* Same for border */
 }
 
 @media screen and (max-width: 800px) {
@@ -180,12 +223,21 @@ section {
     min-height: 100vh;
     padding: 5rem 9% 5rem;
     padding: 3rem 5%;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
 }
+#section2 {
+    background-color: #b74b4b;
+    /* Background for second section */
+    color: black;
+    /* Text color for second section */
+}
+
 
 .home {
     display: flex;
+    color: white;
+
     justify-content: center;
     align-items: center;
     gap: 8rem;
@@ -228,6 +280,28 @@ span {
 .home-img img:hover {
     font-size: 1.8rem;
     font-weight: 500;
+}
+
+.full-page {
+    height: 100vh;
+    /* Full height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0;
+    /* Start invisible */
+    transform: translateY(20px);
+    /* Slide-in effect */
+    transition: opacity 1s ease, transform 1s ease;
+    /* Smooth transition */
+}
+
+.full-page.active {
+    opacity: 1;
+    /* Fully visible */
+    transform: translateY(0);
+    /* Bring into view */
 }
 
 .fade {
