--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ nav a.active {
     border-bottom: 3px solid var(--hover-color, #b74b4b);
 }
 
-@media screen and (max-width: 800px) {
+/* @media screen and (max-width: 800px) {
     nav {
         display: none;
         position: absolute;
@@ -214,6 +214,67 @@ nav a.active {
 
     header .logo {
         display: none;
+    }
+} */
+@media screen and (max-width: 1000px) {
+    .home {
+        gap: 4rem;
+    }
+
+    .home-content h1 {
+        font-size: 4rem;
+        /* Resize for mobile */
+    }
+
+    .home-content h3 {
+        font-size: 2.5rem;
+        /* Smaller subheading */
+    }
+
+    .home-img img {
+        width: 70vw;
+        /* Adjust image size for mobile */
+    }
+
+    nav {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background-color: rgb(0, 0, 0);
+        display: none;
+        flex-direction: column;
+    }
+
+    nav.show {
+        display: flex;
+        /* Show navigation menu on toggle */
+    }
+
+    nav a {
+        margin: 10px 0;
+        font-size: 1.5rem;
+    }
+
+    .hamburger-menu {
+        display: block;
+        /* Show hamburger for smaller screens */
+    }
+
+    .hamburger-menu .line {
+        width: 30px;
+        height: 3px;
+        background-color: #fff;
+        margin: 6px 0;
+    }
+
+    header .logo {
+        display: none;
+    }
+
+    .btn {
+        font-size: 1.2rem;
+        /* Smaller buttons */
     }
 }
 
@@ -470,6 +531,8 @@ h1 {
     /* Adjust heading size */
     margin-bottom: 3rem;
     /* Add space below the main heading */
+    z-index: 1;
+
 }
 
 p {
