--- a/style.css
+++ b/style.css
@@ -208,7 +208,22 @@ nav a.active {
         background-color: #333;
         margin: 3px;
     }
-
+    .full-page-home {
+        max-height: 220vh;  /* Maximum height */
+        overflow-y: auto;   /* Enable scrolling if content exceeds max height */
+        display: flex;      /* Optional: use flexbox for layout */
+        justify-content: center; /* Center content vertically */
+        align-items: center; /* Center content horizontally */
+        position: relative;  /* Positioning context for any absolute elements */
+    }
+    .full-page-home {
+        max-height: 120vh;  /* Maximum height */
+        overflow-y: auto;   /* Enable scrolling if content exceeds max height */
+        display: flex;      /* Optional: use flexbox for layout */
+        justify-content: center; /* Center content vertically */
+        align-items: center; /* Center content horizontally */
+        position: relative;  /* Positioning context for any absolute elements */
+    }
     .btn {
         z-index: 9999;
     }
