--- a/style.css
+++ b/style.css
@@ -221,9 +221,12 @@ nav a.active {
         display: none;
     }
 
+    #section0 {
+        max-height: 300px;
+    }
+
     #section0 h1 {
         margin-top: 800px;
-        max-height: 300px;
     }
 
     .scroll-down-arrow,
