--- a/style.css
+++ b/style.css
@@ -220,10 +220,10 @@ nav a.active {
     header .logo {
         display: none;
     }
-
     #section0 {
         max-height: 300px;
     }
+
 
     #section0 h1 {
         margin-top: 800px;
@@ -238,12 +238,14 @@ nav a.active {
 
 
 section {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     padding: 5rem 9% 5rem;
     padding: 3rem 5%;
     max-width: 1100px;
     margin: 0 auto;
 }
+
+
 
 .home {
     display: flex;
