--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header {
 }
 
 .skill-header strong {
-    width: 150px;
+    /* width: 150px; */
     margin-right: 20px;
 }
 
@@ -227,6 +227,8 @@ nav a.active {
         margin-top: 800px;
     }
 
+
+
     .scroll-down-arrow,
     .scroll-up-arrow {
         display: none;
@@ -278,6 +280,7 @@ section {
     z-index: 1;
     overflow: visible;
 }
+
 .disabled {
     pointer-events: none;
     opacity: 0.5;
@@ -529,7 +532,14 @@ h1 {
     margin-bottom: 3rem;
     /* Add space below the main heading */
     z-index: 1;
+    margin-top: 100px;
 
+}
+
+#section1 h1,
+#section2 h1,
+#section3 h1 {
+    margin-top: -50px;
 }
 
 .description p {
@@ -547,7 +557,7 @@ p {
 }
 
 h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     /* Size of subheadings */
     margin-top: 3rem;
     /* Space above subheadings */
@@ -578,6 +588,7 @@ li {
 li strong {
     color: #b74b4b;
     /* Color for skill names */
+    font-size: 2.2rem;
 }
 
 ul li:last-child {
