--- a/style.css
+++ b/style.css
@@ -631,7 +631,7 @@ li em {
         content: "Medical Engineer";
     }
     26%, 50%{
-        content: "Machine Learning Engineer";
+        content: "Deep Learning Engineer";
     }
     51%, 75%{
         content: "Python Enthusiast";
